--- a/server/templates/sighting.html
+++ b/server/templates/sighting.html
@@ -1,3 +1,5 @@
+{{> head title='Sighting' }}
+
 <h3>Sighting</h3>
 
 {{#each this}}
@@ -18,3 +20,5 @@
     "State/Province": "{{this.[State/Province]}}"
   }
 </pre>
+
+{{> foot}}
