--- a/server/templates/family.html
+++ b/server/templates/family.html
@@ -1,3 +1,5 @@
+{{> head title=name}}
+
 <h3>{{stripLatinFromEbirdFamily name}}</h3>
 
 {{> thumbnails}}
@@ -15,7 +17,7 @@
 			<div class="biglist">
 			{{#each sightingList.dateObjects}}
 			  <div class='biglist-item'>
-			    <div><a href="#trip/{{ebirddate this}}">{{nicedate this}}</a> {{lookup ../customDayNames (ebirddate this)}}</div>
+			    <div><a href="/trip/{{ebirddate this}}">{{nicedate this}}</a> {{lookup ../customDayNames (ebirddate this)}}</div>
 			  </div>
 			{{/each}}
 			</div>
@@ -35,3 +37,4 @@
 	</div>
 </div>
 
+{{> foot}}
