--- a/server/templates/state.html
+++ b/server/templates/state.html
@@ -1,3 +1,5 @@
+{{> head title=(lookupState State)}}
+
 <h3>{{lookupState State}}, <span class='lighter'>{{Country}}</span></h3>
 
 {{> thumbnails}}
@@ -15,7 +17,7 @@
 			<div class="biglist">
 			{{#each sightingList.dateObjects}}
 			  <div class='biglist-item'>
-			    <div><a href="#trip/{{ebirddate this}}">{{nicedate this}}</a> {{lookup ../customDayNames (ebirddate this)}}</div>
+			    <div><a href="/trip/{{ebirddate this}}">{{nicedate this}}</a> {{lookup ../customDayNames (ebirddate this)}}</div>
 			  </div>
 			{{/each}}
 			</div>
@@ -34,3 +36,5 @@
 
 	</div>
 </div>
+
+{{> foot}}
