--- a/server/templates/taxon.html
+++ b/server/templates/taxon.html
@@ -1,3 +1,5 @@
+{{> head title=name}}
+
 <h3>
 	{{name}} <span class='lighter'>{{scientificName}}</span>
 
@@ -27,7 +29,7 @@
 			<div class="biglist">
 			{{#each sightingList.dateObjects}}
 			  <div class='biglist-item'>
-			    <div><a href="#trip/{{ebirddate this}}">{{nicedate this}}</a> {{lookup ../customDayNames (ebirddate this)}}</div>
+			    <div><a href="/trip/{{ebirddate this}}">{{nicedate this}}</a> {{lookup ../customDayNames (ebirddate this)}}</div>
 			  </div>
 			{{/each}}
 			</div>
@@ -46,4 +48,6 @@
 
 	</div>
 </div>
+
+{{> foot}}
 
