--- a/server/templates/taxons.html
+++ b/server/templates/taxons.html
@@ -1,7 +1,11 @@
+{{> head title='Species'}}
+
 <h3>Our Life List <span class='lighter'>{{nicenumber lifeSightingsCount}} species</span></h3>
 
 <div class="biglist">
 	{{#each hierarchy}}
-		<div><a href='#family/{{@key}}'>{{stripLatinFromEbirdFamily @key}}</a></div>
+		<div><a href='/family/{{@key}}'>{{stripLatinFromEbirdFamily @key}}</a></div>
 	{{/each}}
 </div>
+
+{{> foot}}
