--- a/server/templates/year.html
+++ b/server/templates/year.html
@@ -1,3 +1,5 @@
+{{> head title=year}}
+
 <h3>{{year}} Year List</h3>
 
 {{> thumbnails}}
@@ -10,3 +12,5 @@
 
 <div id="{{mapID}}" class="embed-responsive embed-responsive-16by9"></div>
 {{googlemap sightingList mapID}}
+
+{{> foot}}
