do all google maps and charts statically

--- a/server/templates/trip.html
+++ b/server/templates/trip.html
@@ -69,7 +69,8 @@
   </h4>
 {{/if}}
 
-<div id="{{mapID}}" class="embed-responsive embed-responsive-16by9"></div>
-{{googlemap sightingList mapID}}
+<div>
+  {{googlemap sightingList mapID}}
+</div>
 
 {{> foot}}
