--- a/server/templates/year.html
+++ b/server/templates/year.html
@@ -10,7 +10,8 @@
 
 <h4>{{valuecount sightingList "Location"}} Locations</h4>
 
-<div id="{{mapID}}" class="embed-responsive embed-responsive-16by9"></div>
-{{googlemap sightingList mapID}}
+<div>
+	{{googlemap sightingList mapID}}
+</div>
 
 {{> foot}}
