--- a/server/templates/family.html
+++ b/server/templates/family.html
@@ -31,9 +31,9 @@
 
 		<h4>{{valuecount sightingList "Location"}} Locations</h4>
 
-		<div id="{{mapID}}" class="embed-responsive embed-responsive-16by9"></div>
-		{{googlemap sightingList mapID}}
-
+		<div>
+			{{googlemap sightingList mapID}}
+		</div>
 	</div>
 </div>
 
