--- a/server/templates/head.html
+++ b/server/templates/head.html
@@ -78,9 +78,9 @@
             </li>
           </ul>
 
-          <form class="navbar-form navbar-left" role="search">
+          <form action='/search' method='GET' class="navbar-form navbar-left" role="search">
             <div class="form-group">
-              <input id='searchtext' type="text" class="form-control" placeholder="Search">
+              <input id='searchtext' name='searchtext' type="text" class="form-control" placeholder="Search">
             </div>
             <button id='gosearch' type="submit" class="btn btn-default">Submit</button>
           </form>
