add fix for missing county

--- a/server/templates/searchresults.html
+++ b/server/templates/searchresults.html
@@ -14,7 +14,7 @@
 
 <div class="biglist">
   {{#each (locations sightingList)}}
-    <div class='biglist-item'><a href="/place/{{this.[0]}}/{{this.[1]}}/{{this.[2]}}">{{this.[2]}}</a></div>
+    <div class='biglist-item'><a href="/place/{{this.[0]}}/{{addnone this.[1]}}/{{this.[2]}}">{{this.[2]}}</a></div>
   {{/each}}
 </div>
 
