it's birdwalker now for sure

--- a/server/templates/head.html
+++ b/server/templates/head.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 
-    <title>ebird-mybird | {{title}}</title>
+    <title>BirdWalker | {{title}}</title>
 
     <meta name="description" content="ebird-mybird : An offline web app for browsing your personal eBird sightings">
 
