--- a/server/templates/head.html
+++ b/server/templates/head.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="/styles/justifiedGallery.min.css" >
 
     <!-- JQUERY -->
-    <script src="http://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>    
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>    
 
     <!-- Justified Gallery -->
     <script src='/scripts/jquery.justifiedGallery.min.js'></script>
