don't use relative URL's for favicon, it confuses the app server

--- a/server/templates/head.html
+++ b/server/templates/head.html
@@ -8,8 +8,7 @@
 
     <meta name="description" content="ebird-mybird : An offline web app for browsing your personal eBird sightings">
 
-    <link rel="manifest" href="./w3c-manifest.json">
-    <link rel="shortcut icon" href="./images/ebird-favicon.ico">
+    <link rel="shortcut icon" href="/images/ebird-favicon.ico">
     
     <link rel="stylesheet" type="text/css" media="screen" href="/styles/app.css" >
     <link rel="stylesheet" type="text/css" media="screen" href="/styles/justifiedGallery.min.css" >
