show search term in search results page

--- a/server/templates/searchresults.html
+++ b/server/templates/searchresults.html
@@ -1,6 +1,6 @@
 {{> head title='Search Results'}}
 
-<h3>Search Results</h3>
+<h3>Search Results '{{searchtext}}'</h3>
 
 <h4>{{dates.length}} Dates</h4>
 
