--- a/server/templates/taxon.html
+++ b/server/templates/taxon.html
@@ -22,10 +22,8 @@
 
 <div class='row'>
 	<div class='col-md-6'>
-
-		<h4>{{sightingList.dateObjects.length}} Dates</h4>
-
 		{{#if showDates}}
+			<h4>{{sightingList.dateObjects.length}} Dates</h4>
 			<div class="biglist">
 			{{#each sightingList.dateObjects}}
 			  <div class='biglist-item'>
@@ -34,6 +32,7 @@
 			{{/each}}
 			</div>
 		{{else}}
+			<h4>{{sightingList.dateObjects.length}} Dates, {{nicedate sightingList.earliestDateObject}} - {{nicedate sightingList.latestDateObject}}</h4>
 			{{monthgraph sightingsByMonth chartID}}
 		{{/if}}
 	</div>
