--- a/server/templates/taxon.html
+++ b/server/templates/taxon.html
@@ -22,19 +22,7 @@
 
 <div class='row'>
 	<div class='col-md-6'>
-		{{#if showDates}}
-			<h4>{{sightingList.dateObjects.length}} Dates</h4>
-			<div class="biglist">
-			{{#each sightingList.dateObjects}}
-			  <div class='biglist-item'>
-			    <div><a href="/trip/{{ebirddate this}}">{{nicedate this}}</a> {{lookup ../customDayNames (ebirddate this)}}</div>
-			  </div>
-			{{/each}}
-			</div>
-		{{else}}
-			<h4>{{sightingList.dateObjects.length}} Dates, {{nicedate sightingList.earliestDateObject}} - {{nicedate sightingList.latestDateObject}}</h4>
-			{{monthgraph sightingsByMonth chartID}}
-		{{/if}}
+		{{> datelist}}
 	</div>
 
 	<div class='col-md-6'>
