show week of month

--- a/server/templates/photos.html
+++ b/server/templates/photos.html
@@ -15,14 +15,8 @@
 	</div>
 
 	<div class='col-md-4'>
-		<h3><a href="/photosthisweek">Photos this Week</a></h3>
-
+		<h3><a href="/photosthisweek">Photos from {{weekOfMonth currentDate}}</a></h3>
 		<a href="/photosthisweek"><img class='img-responsive' src="{{photosThisWeek.[0].[Photo URL]}}"></a>
-
-		<div class='caption'>
-			<a href="/photosthisweek">{{photosThisWeek.[0].[Common Name]}}</a>,
-			<a href="/photosthisweek">{{photosThisWeek.[0].[Location]}}, {{photosThisWeek.[0].Date}}</a>
-		</div>
 	</div>
 </div>
 
