fix the current part of year photos to use a sliding day-of-year range

--- a/server/templates/photos.html
+++ b/server/templates/photos.html
@@ -15,7 +15,7 @@
 	</div>
 
 	<div class='col-md-4'>
-		<h3><a href="/photosthisweek">Photos from {{weekOfMonth currentDate}}</a></h3>
+		<h3><a href="/photosthisweek">Photos from {{startDayOfYear}} - {{endDayOfYear}}</a></h3>
 		<a href="/photosthisweek"><img class='img-responsive' src="{{photosThisWeek.[0].[Photo URL]}}"></a>
 	</div>
 </div>
