--- a/server/templates/photosthisweek.html
+++ b/server/templates/photosthisweek.html
@@ -1,6 +1,6 @@
 {{> head }}
 
-<h3>Photos from {{weekOfMonth currentDate}}</h3>
+<h3>Photos from {{startDayOfYear}} - {{endDayOfYear}}</h3>
 
 {{> thumbnails}}
 
