rearrange photosthisweek to be photos/dayofyear/:N so that we have a fixed URL with mostly fixed contents

--- a/server/templates/photos.html
+++ b/server/templates/photos.html
@@ -15,8 +15,8 @@
 	</div>
 
 	<div class='col-md-4'>
-		<h3><a href="/photosthisweek">Photos from {{startDayOfYear}} - {{endDayOfYear}}</a></h3>
-		<a href="/photosthisweek"><img class='img-responsive' src="{{photosThisWeek.[0].[Photo URL]}}"></a>
+		<h3><a href="/photos/dayofyear/{{currentDayOfYear}}">Photos from {{startDayOfYear}} - {{endDayOfYear}}</a></h3>
+		<a href="/photos/dayofyear/{{currentDayOfYear}}"><img class='img-responsive' src="{{photosThisWeek.[0].[Photo URL]}}"></a>
 	</div>
 </div>
 
