try position: sticky! show trips by year, make year headings sticky

--- a/server/styles/app.css
+++ b/server/styles/app.css
@@ -25,6 +25,12 @@
 	text-overflow: ellipsis;
 }
 
+.stickyHeader {
+	position: sticky;
+	top: 70px;
+	background-color: white
+}
+
 .biglist-item {
 	white-space: nowrap;
 	overflow: hidden;
