update birdwalker to use Bootstrap 4.4.1 make some stylistic changes to adapt to new Bootstrap omit counted page headings when counts are equal to 1

--- a/server/styles/app.css
+++ b/server/styles/app.css
@@ -19,6 +19,13 @@
 	columns: 20em;
 }
 
+a:link {
+	color: #000;
+}
+a:visited {
+	color: #000;
+}
+
 .biglist h3 {
 	white-space: nowrap;
 	overflow: hidden;
@@ -29,6 +36,15 @@
 	position: sticky;
 	top: 52px;
 	background-color: white
+}
+
+.biglist-header {
+	font-weight: bold;
+	padding-bottom: 10px;
+}
+
+.biglist-group {
+	padding-bottom: 10px;
 }
 
 .biglist-item {
